--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p> Welcome SumaBhanu</p>
-<p> studying btech 3rd year </p>
-<i> id no:14004275 </i>
+<p> studying btech 3rd year 
+  <i> id no:14004275 </i> </p>
