--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<p> Welcome SumaBhanu</p>
-<p> studying btech 3rd year 
-  <i> id no:14004275 </i> </p>
+<h1> Welcome </h1> 
+<p> SumaBhanu</p>
+<p> 3rd year ECE </p>
+ <p> <i> id no:14004275 </i> </p>
