--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<p> Welcome </p> 
-<p> SumaBhanu</p>
-<p> 3rd year ECE </p>
- <p> <i> id no:14004275 </i> </p>
+<html>
+ <head>  <title> this my web page </title> </head>
+ <body>
+  <h1 align="centre" > <p>WELCOME TO VIEW </p> </h1>
+   </body>
+</html>
