--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>  <title> this my web page </title> </head>
  <body>
-  <h1 align="centre" > <p> WELCOME TO VIEW </p>  </h1>
+  <p> <b> HTML::HYPER TEXT MARKUP LANGUAGE </b> </p>
    </body>
 </html>
