--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>  <title> this my web page </title> </head>
  <body>
-  <p> HTML::HYPER TEXT MARKUP LANGUAGE  </p>
+  <p> <b>HTML::HYPER TEXT MARKUP LANGUAGE </b> </p>
    </body>
 </html>
