--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
  <head>  <title> this my web page </title> </head>
  <body>
-  <p> <b>HTML::HYPER TEXT MARKUP LANGUAGE </b> </p>
+  <h4><b><centre> RESUME </centre></b></h4>
+  <p> Name : L.SUMA BHANU </p>
    </body>
 </html>
+   
