--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>  <title> this my web page </title> </head>
  <body>
-  <h4><b><centre> RESUME </centre></b></h4>
+  <h4><b><center> RESUME </center></b></h4>
   <p> Name : L.SUMA BHANU </p>
    </body>
 </html>
