--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
  <head>  <title> this my web page </title> </head>
  <body>
-  <h4><b><center> RESUME </center></b></h4>
-  <p> Name : L.SUMA BHANU </p>
+  <h4><b><center> L.Suma Bhanu </center></b></h4>
    </body>
 </html>
    
