--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
- <head>  <title> this my web page </title> </head>
+ <head>  <title> RESUME </title> </head>
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
+  <p> KLUNIVERSITY                 <b> EmailId:lakkimsettysumabhanu@gmail.com</b></p>
    </body>
 </html>
    
