--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>  <title> RESUME </title> </head>
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
-  <p> KLUNIVERSITY                 <b> EmailId:lakkimsettysumabhanu@gmail.com</b></p>
+  <p> KLUNIVERSITY                 <b><right> EmailId:lakkimsettysumabhanu@gmail.com></right></b></p>
    </body>
 </html>
    
