--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <p> vaddeswaram <b><div align="right"> Contact no:9989925596 </div></b> </p>
   <p> Guntur district </p>
   <hr>
+  <p><b><u> CAREER OBJECTIVE :</u></b></p>
    </body>
 </html>
    
