--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
  <head>  <title> RESUME </title> </head>
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
-  <p> KLUNIVERSITY <b><div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></b></p>
+  <p> KLUNIVERSITY <div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></p>
   <p> vaddeswaram <div align="right"> Contact no:9989925596 </div> </p>
   <p> Guntur district </p>
   <hr>
   <p><b><u> CAREER OBJECTIVE :</u></b></p>
+<p> Taking this oppotunity into consideration.</p>
    </body>
 </html>
    
