--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>  <title> RESUME </title> </head>
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
-  <p> KLUNIVERSITY <div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></p>
+  <p> <div align="left">KLUNIVERSITY</div> <div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></p>
   <p> vaddeswaram <div align="right"> Contact no:9989925596 </div> </p>
   <p> Guntur district </p>
   <hr>
