--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
   <p> <div align="left">KLUNIVERSITY</div> <div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></p>
-  <p> vaddeswaram <div align="right"> Contact no:9989925596 </div> </p>
+ <p> <div align="left" vaddeswaram </div> <div align="right"> Contact no:9989925596 </div> </p>
   <p> Guntur district </p>
   <hr>
   <p><b><u> CAREER OBJECTIVE :</u></b></p>
-<p> Taking this oppotunity into consideration.</p>
+<p> Taking every opportunity into consideration.</p>
    </body>
 </html>
    
