--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
   <p> <div align="left">KLUNIVERSITY</div> <div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></p>
- <p> <div align="left" vaddeswaram </div> <div align="right"> Contact no:9989925596 </div> </p>
+ <p> <div align="left" >vaddeswaram </div> <div align="right"> Contact no:9989925596 </div> </p>
   <p> Guntur district </p>
   <hr>
   <p><b><u> CAREER OBJECTIVE :</u></b></p>
 <p> Taking every opportunity into consideration.</p>
+<p><b><u> ACADEMIC QUALIFICATIONS :</u></b></p>
+ <table>
+  <tr>
+    <th>Qualification</th>
+    <th>Institution</th>
+    <th>grade</th>
+  </tr>
+  <tr>
+    <td>BTECH</td>
+    <td>KLUNIVERSITY</td>
+    <td>9.4</td>
+  </tr>
+  <tr>
+    <td>INTERMEDIATE</td>
+    <td>NARAYANA JUNIOR COLLEGE</td>
+    <td>96%</td>
+  </tr>
+  <tr>
+    <td>SSC</td>
+    <td>NARAYANA TECHNO SCHOOL</td>
+    <td>9.7</td>
+  </tr>
+</table> 
    </body>
 </html>
    
