--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
     <th>Institution</th>
     <th>grade</th>
   </tr>
+  <hr>
   <tr>
     <td>BTECH</td>
     <td>KLUNIVERSITY</td>
     <td>9.4</td>
   </tr>
+  <hr>
   <tr>
-    <td>INTERMEDIATE</td>
-    <td>NARAYANA JUNIOR COLLEGE</td>
+    <td>INTER</td>
+    <td>NARAYANA COLLEGE</td>
     <td>96%</td>
   </tr>
+  <hr>
   <tr>
     <td>SSC</td>
     <td>NARAYANA TECHNO SCHOOL</td>
     <td>9.7</td>
   </tr>
+  <hr>
 </table> 
    </body>
 </html>
