--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 <p><b><u> ACADEMIC QUALIFICATIONS :</u></b></p>
  <table>
   <tr>
-    <th>Qualification</th>
-    <th>Institution</th>
-    <th>grade</th>
+    <th><div align="left">Qualification</div></th>
+    <th><div align="centre">Institution</div></th>
+    <th><div align="right">grade</div></th>
   </tr>
-  <hr>
+ 
   <tr>
-    <td>BTECH</td>
-    <td>KLUNIVERSITY</td>
-    <td>9.4</td>
+    <td><div align="left">BTECH</div></td>
+    <td><div align="centre">KLUNIVERSITY</div></td>
+    <td><div align="right">9.4</div></td>
   </tr>
-  <hr>
+ 
   <tr>
-    <td>INTER</td>
-    <td>NARAYANA COLLEGE</td>
-    <td>96%</td>
+    <td><div align="left">INTER</div></td>
+    <td><div align="centre">NARAYANA COLLEGE</div></td>
+    <td><div align="right">96%</div></td>
   </tr>
-  <hr>
+ 
   <tr>
-    <td>SSC</td>
-    <td>NARAYANA TECHNO SCHOOL</td>
-    <td>9.7</td>
+    <td><div align="left">SSC</div></td>
+    <td><div align="centre">NARAYANA TECHNO SCHOOL</div></td>
+    <td><div align="right">9.7</div></td>
   </tr>
-  <hr>
+ 
 </table> 
    </body>
 </html>
