--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
  <head>  <title> RESUME </title> </head>
+ <style>
+ table th,td
+  {
+   border: 1px solid black;
+}
+</style>
  <body>
   <h4><b><center> L.Suma Bhanu </center></b></h4>
   <p> <div align="left">KLUNIVERSITY</div> <div align="right"> EmailId:lakkimsettysumabhanu@gmail.com </div></p>
