--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p> Guntur district </p>
   <hr>
   <p><b><u> CAREER OBJECTIVE :</u></b></p>
-<p> Taking every opportunity into consideration.</p>
+<p> To show my talent.</p>
 <p><b><u> ACADEMIC QUALIFICATIONS :</u></b></p>
  <table>
   <tr>
@@ -41,6 +41,9 @@
   </tr>
  
 </table> 
-   </body>
+<p><b><u> Technical skills :</u></b></p>
+<p><b>LANGUAGES:</b> C,Python,Java </p>
+
+</body>
 </html>
    
