--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p> Guntur district </p>
   <hr>
   <p><b><u> CAREER OBJECTIVE :</u></b></p>
-<p> To show my talent.</p>
+<p> To secure a challenging position where I can effectively contribute my skills.</p>
 <p><b><u> ACADEMIC QUALIFICATIONS :</u></b></p>
  <table>
   <tr>
@@ -43,6 +43,8 @@
 </table> 
 <p><b><u> Technical skills :</u></b></p>
 <p><b>LANGUAGES:</b> C,Python,Java </p>
+<p><b>Web Technologies:</b> HTML </p>
+<p><b>Applications:</b> MSOFFICE </p>
 
 </body>
 </html>
