--- a/index.html
+++ b/index.html
@@ -17,34 +17,50 @@
 <p><b><u> ACADEMIC QUALIFICATIONS :</u></b></p>
  <table>
   <tr>
-    <th><div align="left">Qualification</div></th>
-    <th><div align="centre">Institution</div></th>
-    <th><div align="right">grade</div></th>
+    <th>Qualification</th>
+    <th>Institution</th>
+    <th>grade</th>
   </tr>
  
   <tr>
-    <td><div align="left">BTECH</div></td>
-    <td><div align="centre">KLUNIVERSITY</div></td>
-    <td><div align="right">9.4</div></td>
+    <td>BTECH</td>
+    <td>KLUNIVERSITY</td>
+    <td>9.4</td>
   </tr>
  
   <tr>
-    <td><div align="left">INTER</div></td>
-    <td><div align="centre">NARAYANA COLLEGE</div></td>
-    <td><div align="right">96%</div></td>
+    <td>INTER</td>
+    <td>NARAYANA COLLEGE</td>
+    <td>96%</td>
   </tr>
  
   <tr>
-    <td><div align="left">SSC</div></td>
-    <td><div align="centre">NARAYANA TECHNO SCHOOL</div></td>
-    <td><div align="right">9.7</div></td>
+    <td>SSC</td>
+    <td>NARAYANA TECHNO SCHOOL</td>
+    <td>9.7</td>
   </tr>
  
 </table> 
+<hr>
 <p><b><u> Technical skills :</u></b></p>
-<p><b>LANGUAGES:</b> C,Python,Java </p>
-<p><b>Web Technologies:</b> HTML </p>
-<p><b>Applications:</b> MSOFFICE </p>
+<ul>
+ <li><p><b>LANGUAGES:</b> C,Python,Java </p></li>
+ <li><p><b>Web Technologies:</b> HTML </p></li>
+ <li><p><b>Applications:</b> MSOFFICE </p></li>
+</ul>
+<hr>
+<p><b><u> Area ofinterest :</u></b></p>
+<ul>
+ <li><p>Digital electronics</li>
+</ul>
+<hr>
+<p><b><u> Personal Traits :</u></b></p>
+<ul>
+ <li><p>Good analytical skills</li>
+  <li><p>Good Verbal and written skills</li>
+</ul>
+
+
 
 </body>
 </html>
